<resources>
    <string name="social">Social</string>
    <string name="contact">Contact</string>
    <string name="daily_insult">Daily Insult</string>
    <string name="status">Status</string>
    <string name="enable_daily_insult">Enable daily insult notification</string>
    <string name="rhythm">Rhythm</string>
    <string name="daily">Daily</string>
    <string name="weekly">Weekly</string>
    <string name="monthly">Monthly</string>
    <string name="time">Time</string>
    <string name="day_of_week">Day of week</string>
    <string name="day_of_month">Day of month</string>
    <string name="app_language">App Language</string>
    <string name="notification_permission_denied">Notification permission denied. Cannot enable daily insult.</string>
    <string name="select_day">Select Day</string>
    <string name="select_day_of_month">Select Day of Month</string>
    <string name="mon">Mon</string>
    <string name="tue">Tue</string>
    <string name="wed">Wed</string>
    <string name="thu">Thu</string>
    <string name="fri">Fri</string>
    <string name="sat">Sat</string>
    <string name="sun">Sun</string>
    <string name="language">Language</string>
    <string name="legal">Legal</string>
    <string name="generate">Generate</string>
    <string name="share">Share</string>
    <string name="twitter">Twitter</string>
    <string name="newsletter">Newsletter</string>
    <string name="website">Website</string>
    <string name="proposal">Proposal</string>
    <string name="support">Support</string>

    <string name="error">Error</string>
    <string name="network_connection_required">%1$s requires an active internet connection. Please try again later.</string>

    <string name="spanish">Spanish</string>
    <string name="english">English</string>
    <string name="italian">Italian</string>
    <string name="chinese">Chinese</string>
    <string name="hindi">Hindi</string>
    <string name="arabic">Arabic</string>
    <string name="portuguese">Portuguese</string>
    <string name="bengali">Bengali</string>
    <string name="russian">Russian</string>
    <string name="japanese">Japanese</string>
    <string name="javanese">Javanese</string>
    <string name="swahili">Swahili</string>
    <string name="german">German</string>
    <string name="korean">Korean</string>
    <string name="french">French</string>
    <string name="telugu">Telugu</string>
    <string name="marathi">Marathi</string>
    <string name="turkish">Turkish</string>
    <string name="tamil">Tamil</string>
    <string name="vietnamese">Vietnamese</string>
    <string name="urdu">Urdu</string>
    <string name="greek">Greek</string>
    <string name="czech">Czech</string>
    <string name="finnish">Finnish</string>
    <string name="afrikaans">Afrikaans</string>
    <string name="bulgarian">Bulgarian</string>
    <string name="catalan">Catalan</string>
    <string name="danish">Danish</string>
    <string name="dutch">Dutch</string>
    <string name="hebrew">Hebrew</string>
    <string name="hungarian">Hungarian</string>
    <string name="indonesian">Indonesian</string>
    <string name="kannada">Kannada</string>
    <string name="norwegian">Norwegian</string>
    <string name="persian">Persian</string>
    <string name="polish">Polish</string>
    <string name="punjabi">Punjabi</string>
    <string name="romanian">Romanian</string>
    <string name="serbian">Serbian</string>
    <string name="sinhala">Sinhala</string>
    <string name="swedish">Swedish</string>
    <string name="thai">Thai</string>
    <string name="ukrainian">Ukrainian</string>
    <string name="latin">Latin</string>
</resources>
